--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+# basic workflow setup
+.run_on_master: &run_on_master
+  if: $CI_COMMIT_BRANCH == "master" || $CI_COMMIT_BRANCH == "main"
+
+.run_on_dev: &run_on_dev
+  if: $CI_COMMIT_BRANCH == "develop" || $CI_COMMIT_BRANCH == "dev"
+
 variables:
   KT_IMAGE: ${BUILD_IMAGE}
   DOCKER_DRIVER: overlay2
@@ -22,3 +29,11 @@ kt-test:
   stage: test
   script:
     - ./gradlew test
+
+
+kt-publish:
+  image: $KT_IMAGE
+  stage: publish
+  needs: [ kt-test ]
+  script:
+    - ./gradlew publishFatJar
