--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,5 +36,8 @@ kt-publish:
   image: $KT_IMAGE
   stage: publish
   needs: [ kt-test ]
+  rules:
+    - *run_on_dev
+    - *run_on_master
   script:
     - ./gradlew publishFatJar
