--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,11 @@
 name: tests
+
 on:
   push:
-  workflow_dispatch:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 jobs:
   test-and-build:
     runs-on: ubuntu-latest
