--- a/build_docker/Dockerfile_build_inhouse_gitlab
+++ b/build_docker/Dockerfile_build_inhouse_gitlab
@@ -1,4 +1,4 @@
-# Тестовый образ для инхаус тестирования драйвера svdb
-FROM openjdk:17.0.2-slim-buster
+ # Тестовый образ для инхаус тестирования драйвера svdb
+FROM INHOUSE_GITLAB_HOST/spectrum-internal/devops/java:d20.10.17-g8.1-jdk18-git
 
 COPY ./test_instance/svdb-srv /opt/svdb-srv
